# P2P-Project

./: .gitignore  CMakeLists.txt  Makefile  connectionTest.c  connectionTest.cpp  main.cpp  test.sh
Tests/: ChatInterface.cpp  ClientTest.cpp  PacketTest.cpp  ServerTest.cpp
Tests/openssl/: KEM-ML.cpp  test.cpp
UDPConection/: Packet.cpp  Packet.h  UDPConnection.cpp  UDPConnection.h  a  udpClient.cpp
UDPConnection/: Encyption.cpp  IncomingHandler.cpp  IncomingHandler.h  Packet.cpp  Packet.h  UDPConnection.cpp  UDPConnection.h
UDPConnection/DataTypes/: DataTypes.h  FileContainer.cpp
UDPConnection/Encryption/: Encryption.h
UDPConnection/ReceivingPackets/: IncomingHandler.cpp  IncomingHandler.h
UDPConnection/SendingPackets/: UDPConnection.h
Users/: Client.cpp  Client.h  Server.cpp  Server.h  User.h
include/ProjectFern/: CMakeLists.txt
include/ProjectFern/DataTypes/: DataTypes.h  ID.h  UUID.h
include/ProjectFern/Networking/: Encryption.h  IncomingHandler.h  Packet.h  UDPConnection.h  socketMacro.h
include/ProjectFern/Server/: PrimaryClient.h  RemoteUser.h  Server.h  TextChannel.h
openssl/: KEM-ML.cpp  Tag  gcmExample.cpp  test.cpp
src/: main.cpp
src/DataTypes/: FileContainer.cpp  FileIndicator.cpp  ID.cpp  MessageContainer.cpp  UUID.cpp
src/Networking/: Encryption.cpp  IncomingHandler.cpp  Packet.cpp  UDPConnection.cpp
src/Server/: PrimaryClient.cpp  RemoteUser.cpp  Server.cpp
